--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!--==================== UNICONS ====================-->
@@ -16,6 +18,8 @@
 
   <title>Responsive Portfolio Website</title>
 </head>
+
+
 
 <body>
   <!--==================== HEADER ====================-->
@@ -125,7 +129,7 @@
 
 
   <!--==================== SWIPER JS ====================-->
-  <script src=""></script>
+
 
   <!--==================== MAIN JS ====================-->
   <script src="./assets/js/main.js"></script>
