--- a/index.html
+++ b/index.html
@@ -804,14 +804,108 @@
 
     <!--==================== CONTACT ME ====================-->
     <section class="contact section" id="contact">
-      <!-- <h2 class="section__title">Contact Me</h2>
-           <span class="section__subtitle"></span> -->
+      <h2 class="section__title">Contact Me</h2>
+      <span class="section__subtitle">Get in Touch</span>
+
+      <div class="contact__container container grid">
+        <div>
+          <div class="contact__infomation">
+            <i class="uil uil-phone contact__icon"></i>
+
+            <div>
+              <h3 class="contact__title">Call Me</h3>
+              <span class="contact__subtitlee">999-777-666</span>
+            </div>
+          </div>
+
+          <div class="contact__infomation">
+            <i class="uil uil-envelope contact__icon"></i>
+            <div>
+              <h3 class="contact__title">Email</h3>
+              <span class="contact__subtitlee">alexa@email.com</span>
+            </div>
+          </div>
+
+          <div class="contact__infomation">
+            <i class="uil uil-map-marker contact__icon"></i>
+
+            <div>
+              <h3 class="contact__title">Location</h3>
+              <span class="contact__subtitlee">Peru - Lima Av.Bolivar #123</span>
+            </div>
+          </div>
+        </div>
+
+        <form action="" class="contact__form grid">
+          <div class="contact__inputs grid">
+            <div class="contact__content">
+              <label for="name" class="contact__label">Name</label>
+              <input type="text" id="name" class="contact__input">
+            </div>
+            <div class="contact__content">
+              <label for="email" class="contact__label">Email</label>
+              <input type="email" id="email" class="contact__input">
+            </div>
+          </div>
+          <div class="contact__content">
+            <label for="project" class="contact__label">Project</label>
+            <input type="text" id="project" class="contact__input">
+          </div>
+          <div class="contact__content">
+            <label for="message" class="contact__label">Message</label>
+            <textarea name="" id="message" cols="0" rows="7" class="contact__input"></textarea>
+          </div>
+
+          <div>
+            <a href="#" class="button button--flex">
+              Send Message
+              <i class="uil uil-message button__icon"></i>
+            </a>
+          </div>
+
+        </form>
+      </div>
     </section>
   </main>
 
   <!--==================== FOOTER ====================-->
   <footer class="footer">
+    <div class="footer__bg">
+      <div class="footer__container container grid">
+        <div>
+          <h1 class="footer__title">Alexa</h1>
+          <span class="footer__subtitle">Frontend developer</span>
+        </div>
 
+        <ul class="footer__links">
+          <li>
+            <a href="#services" class="footer__link">Services</a>
+          </li>
+          <li>
+            <a href="#portfolio" class="footer__link">Portfolio</a>
+          </li>
+          <li>
+            <a href="#contact" class="footer__link">Contactme</a>
+          </li>
+        </ul>
+
+        <div class="footer__socials">
+          <a href="https://www.facebook.com/" target="_blank" class="footer__social">
+            <i class="uil uil-facebook-f"></i>
+          </a>
+
+          <a href="https://www.instagram.com/" target="_blank" class="footer__social">
+            <i class="uil uil-instagram"></i>
+          </a>
+
+          <a href="https://twitter.com/" target="_blank" class="footer__social">
+            <i class="uil uil-twitter-alt"></i>
+          </a>
+        </div>
+      </div>
+
+      <p class="footer__copy">&#169; Bedimcode. All right reserved</p>
+    </div>
   </footer>
 
   <!--==================== SCROLL TOP ====================-->
