--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list grid">
           <li class="nav__item">
-            <a href="#home" class="nav__link">
+            <a href="#home" class="nav__link active-link">
               <i class="nav__icon uil uil-estate"></i>Home
             </a>
           </li>
@@ -65,6 +65,10 @@
       </div>
 
       <div class="nav__btns">
+        <!-- Theme Change -->
+        <i class="uil uil-moon change-theme" id="theme-button"></i>
+
+
         <div class="nav__toggle" id="nav-toggle">
           <i class="uil uil-apps"></i>
         </div>
@@ -909,7 +913,9 @@
   </footer>
 
   <!--==================== SCROLL TOP ====================-->
-
+  <a href="#" class="scrollup" id="scroll-up">
+    <i class="uil uil-arrow-up scrollup_icon"></i>
+  </a>
 
   <!--==================== SWIPER JS ====================-->
   <script src="./assets/js/swiper-bundle.min.js"></script>
